examples/errors/underscore.tex
\documentclass{article}
\begin{document}
Lorem ipsum dolor sit amet_ consectetur adipisicing elit
\end{document}
